--- a/hugo.yml
+++ b/hugo.yml
@@ -14,6 +14,7 @@ markup:
     renderer:
       unsafe: true
 params:
+  hugo_version: 0.124.1
   latest_version: 2.44.0
   latest_relnote_url: https://raw.github.com/git/git/master/Documentation/RelNotes/2.44.0.txt
   latest_release_date: '2024-02-23'
