--- a/hugo.yml
+++ b/hugo.yml
@@ -15,6 +15,7 @@ markup:
       unsafe: true
 params:
   hugo_version: 0.124.1
+  pagefind_version: 1.1.0-rc1
   latest_version: 2.44.0
   latest_relnote_url: https://raw.github.com/git/git/master/Documentation/RelNotes/2.44.0.txt
   latest_release_date: '2024-02-23'
