--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,16 @@ jobs:
     - name: run Hugo to build the pages
       run: hugo
 
+    - name: ensure that there are no absolute URLs
+      run: |
+        set -x
+        if git grep --untracked --no-exclude-standard "\\(href\|src\) *= *[\"']/" \
+          -- public/ ':^public/js/jquery*' >/tmp/abs-urls.txt
+        then
+          cat /tmp/abs-urls.txt
+          exit 1
+        fi
+
     - name: run Pagefind ${{ env.PAGEFIND_VERSION }} to build the search index
       run: npx -y pagefind@${{ env.PAGEFIND_VERSION }} --site public
 
